--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
   # Include question assets
   assets:
     - assets/questions/
+    - assets/questions/farmakoloji/
+    - assets/questions/terminoloji/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
