--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Social Icons
+  font_awesome_flutter: ^10.7.0
+
+  # SVG Support
+  flutter_svg: ^2.0.10+1
+
   # State Management
   flutter_riverpod: ^2.4.9
 
@@ -75,6 +81,7 @@ flutter:
     - assets/questions/
     - assets/questions/farmakoloji/
     - assets/questions/terminoloji/
+    - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
