mab sistemi değişti

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,21 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.0
+gunicorn==21.2.0
 sqlalchemy==2.0.32
+alembic==1.13.0
+psycopg2-binary==2.9.9
 aiomysql==0.2.0
 pydantic==2.8.2
+pydantic-settings==2.1.0
 python-multipart==0.0.9
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+celery==5.3.4
+redis==5.0.1
+pandas==2.1.4
+numpy==1.25.2
+structlog==23.2.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
+python-dotenv==1.0.0
+httpx==0.25.2
