--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,19 @@
-# Heroku deployment example:
-# heroku config:set DATABASE_URL=mysql+aiomysql://username:password@hostname:port/database_name
-# heroku config:set DEBUG=False
+# Database Configuration
+DATABASE_URL=postgresql://username:password@hostname:port/database
 
-# Local development (optional .env file)
-# DATABASE_URL=mysql+aiomysql://root:password@localhost:3306/mabquiz
-# DEBUG=True
+# Redis Configuration (for Celery)
+REDIS_URL=redis://hostname:port/0
+
+# Railway Environment Variables (automatically set)
+RAILWAY_ENVIRONMENT_NAME=production
+RAILWAY_SERVICE_NAME=mabquiz-backend
+
+# API Configuration
+API_HOST=0.0.0.0
+API_PORT=8000
+
+# Security
+SECRET_KEY=your-secret-key-here
+
+# Logging
+LOG_LEVEL=INFO
