--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
 
   # File system access for MAB persistence
   path_provider: ^2.1.1
+  
+  # Authentication and storage
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
