--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,8 +10,6 @@ pydantic-settings==2.1.0
 python-multipart==0.0.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-celery==5.3.4
-redis==5.0.1
 pandas==2.1.4
 numpy==1.25.2
 structlog==23.2.0
@@ -19,3 +17,5 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 python-dotenv==1.0.0
 httpx==0.25.2
+aiosqlite==0.19.0
+asyncpg==0.28.0
