--- a/railway.toml
+++ b/railway.toml
@@ -14,6 +14,5 @@ ENVIRONMENT = "production"
 DATABASE_URL = "${{DATABASE_URL}}"
 PYTHONPATH = "/app"
 
-[[services]]
-name = "mabquiz-backend"
-source = "."
+[[services.deploy]]
+startCommand = "gunicorn app.main:app --bind 0.0.0.0:$PORT --workers 2 --worker-class uvicorn.workers.UvicornWorker"
