Update railway.toml to use $PORT environment variable for binding in startCommand

--- a/railway.toml
+++ b/railway.toml
@@ -15,4 +15,4 @@ DATABASE_URL = "${{DATABASE_URL}}"
 PYTHONPATH = "/app"
 
 [[services.deploy]]
-startCommand = "python -m app.create_tables && gunicorn app.main:app --bind 0.0.0.0:$PORT --workers 2 --worker-class uvicorn.workers.UvicornWorker"
+startCommand = "python create_tables.py && gunicorn app.main:app --bind 0.0.0.0:$PORT --workers 2 --worker-class uvicorn.workers.UvicornWorker"
