Refactor Dockerfile and railway.toml to run database setup before starting the application

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -32,4 +32,4 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
 
 # Command to run the application
 # Use $PORT environment variable provided by Railway
-CMD gunicorn app.main:app --bind 0.0.0.0:$PORT --workers 2 --worker-class uvicorn.workers.UvicornWorker
+CMD python create_tables.py && gunicorn app.main:app --bind 0.0.0.0:$PORT --workers 2 --worker-class uvicorn.workers.UvicornWorker
